<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_vertical_margin">

    <Button
        android:id="@+id/btn_enable"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="@drawable/rounded_btn"
        android:textColor="#fff"
        android:text="@string/text_enable" />

    <Button
        android:id="@+id/btn_view_paired"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:textColor="#fff"
        android:background="@drawable/rounded_btn_blue"
        android:enabled="false"
        android:text="@string/text_view_paired" />

    <Button
        android:id="@+id/btn_scan"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:textColor="#fff"
        android:background="@drawable/rounded_btn_red"
        android:enabled="false"
        android:text="@string/text_scan_devices" />

    <Button
        android:id="@+id/btnRead"
        android:layout_width="match_parent"
        android:textColor="#fff"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="@drawable/rounded_btn_orange"
        android:layout_height="70dp"
        android:text="@string/txt_connect" />

    <ImageView
        android:id="@+id/imgMain"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/activity_vertical_margin"

        android:adjustViewBounds="true"
        android:background="@drawable/web_hi_res_512"
        android:scaleType="matrix" />
    <TextView
        android:id="@+id/tv_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/text_bluetooth_off"
        android:textColor="#ff0000"
        android:textSize="17sp" />


</LinearLayout>